feat: replace view more btn to pagination btn and change get feed endpoint to support page query
